SecurityCoreAdd+Settings path&search

--- a/Romanian/main/SecurityCoreAdd.apk/res/values-ro/strings.xml
+++ b/Romanian/main/SecurityCoreAdd.apk/res/values-ro/strings.xml
@@ -88,24 +88,126 @@ Le puteți de asemenea descărca separat."</string>
     <string name="import_file_suc">Elemente importate în dosare</string>
     <string name="import_now">Importați</string>
     <string name="import_photo">Importați fotografii</string>
-  <string name="import_photo_desc">View shared items in Second space</string>
-  <string name="import_photo_suc">Imported photos</string>
-  <string name="list_empty_text">Empty</string>
-  <string name="loading_apps">Loading apps…</string>
-  <string name="loading_space">Just a sec…</string>
-  <string name="loading_success">Loaded successfully</string>
-  <string name="mess ageData">Messages</string>
-  <string name="msg_switch_file">Delete these files in First space after they are moved?</string>
-  <string name="msg_switch_photo">Delete these photos in First space after they are moved?</string>
-  <string name="needSetKeyguardFirst">Set First space password</string>
-  <string name="needSetKeyguardFirstDes">Set First space password before you set Second space password</string>
-  <string name="newSecondSpace">Turn on Second space</string>
-  <string name="next_setp">Next</string>
-  <string name="normal_app">First space</string>
-  <string name="not_support_multiple_users">"Multiple spaces aren't supported"</string>
-  <string name="notificationSetPassword">Set password</string>
-  <string name="notificationSetPasswordDes">Protect Second space data</string>
-  <string name="notificationSummary">Switch between spaces from Notification shade</string>
-  <string name="notificationTitle">Notification shade shortcut</string>
-  <string name="notification_setting_second_space">Set up Second space</string>
+    <string name="import_photo_desc">Vizualizați elementele partajate în Spațiul Secundar</string>
+    <string name="import_photo_suc">Fotografii importate</string>
+    <string name="list_empty_text">Gol</string>
+    <string name="loading_apps">Se încarcă aplicațiile…</string>
+    <string name="loading_space">Doar o secundă…</string>
+    <string name="loading_success">Încărcate cu succes</string>
+    <string name="mess ageData">Mesaje</string>
+    <string name="msg_switch_file">Ștergeți aceste fișiere din Spațiul Principal după ce vor fi mutate?</string>
+    <string name="msg_switch_photo">Ștergeți aceste fotografii din Spațiul Principal după ce vor fi mutate?</string>
+    <string name="needSetKeyguardFirst">Setați parola pentru Spațiul Principal</string>
+    <string name="needSetKeyguardFirstDes">Setați parola pentru Spațiul Principal înainte de a o seta pe cea pentru Spațiul Secundar</string>
+    <string name="newSecondSpace">Activați Spațiul Secundar</string>
+    <string name="next_setp">Mai departe</string>
+    <string name="normal_app">Spațiul Principal</string>
+    <string name="not_support_multiple_users">"Nu sunt suportate spații de lucru multiple"</string>
+    <string name="notificationSetPassword">Setați parola</string>
+    <string name="notificationSetPasswordDes">Protejați-vă datele din Spațiul Secundar</string>
+    <string name="notificationSummary">Comutați spațiul de lucru din bara de notificări</string>
+    <string name="notificationTitle">Buton în bara de notificări</string>
+    <string name="notification_setting_second_space">Configurați Spațiul Secundar</string>
+    <string name="notification_setting_second_space_desc">Adăugați parola pentru Spațiul Secundar și mutați datele</string>
+    <string name="ok_button">OK</string>
+    <string name="openPasswordGuard">Setați parola pentru Spațiul Secundar</string>
+    <string name="openSuccess">Activat</string>
+    <string name="opened">Pornit</string>
+    <string name="otherSettings">Alte setări</string>
+    <string name="passWordGuardSummary">Accesați Spațiul Secundar din blocarea ecranului utilizând o parolă</string>
+    <string name="passwordProtect">Parola</string>
+    <string name="privacyContactsSummary">Arată elementele private în Spațiul Secundar</string>
+    <string name="privacyContactsTitle">Mesaje și contacte private</string>
+    <string name="private_sms_show_sub_title">Mesajele vor fi partajate între cele 2 spații de lucru​</string>
+    <string name="private_sms_show_title">Mesajele private sunt vizibile în Spațiul Secundar</string>
+    <string name="private_space_setting">Gestionare</string>
+    <string name="public_app">Ambele spații de lucru</string>
+    <string name="removeSuccess">Șters cu succes</string>
+    <string name="remove_second_space_msg">Toate datele aplicațiilor din Spațiul Secundar vor fi șterse după ce veți elimina Spațiul Secundar. Continuați?</string>
+    <string name="removingSpace">Ștergere…</string>
+    <string name="restore_normal_show">"Nu arăta mesajele private"</string>
+    <string name="restore_show_desc">"Nu arăta mesajele private în Spațiul Secundar. Ele vor fi în continuare disponibile în Spațiul Principal."</string>
+    <string name="restore_show_toast">Nu se afișează mesajele private</string>
+    <string name="retain_src_file">Păstrează fișierele</string>
+    <string name="retain_src_photo">Păstrează fotografiile</string>
+    <string name="secondSpace">Spațiul Secundar</string>
+    <string name="serNameSummary">Spațiul Secundar</string>
+    <string name="setSecondSpacePassword">Setați parola pentru Spațiul Secundar</string>
+    <string name="setSecondSpacePasswordGuide">Seați parola pentru Spațiul Secundar</string>
+    <string name="setSecondSpacePasswordGuideDes">Utilizați această parolă pentru a accesa Spațiul Secundar direct din blocarea ecranului</string>
+    <string name="setSpacePasswordGuide">Utilizați parole diferite pentru accesarea din blocarea ecranului a celor două spații de lucru</string>
+    <string name="setSuccess">Parolele au fost setate cu succes</string>
+    <string name="set_space_pwd_detail">Puteți accesa Spațiul Secundar utilizând parola</string>
+    <string name="set_space_pwd_suc">Parola pentru Spațiul Secundar a fost adăugată</string>
+    <string name="setting_is_show_text_contacts">Setați mesajele și contactele private</string>
+    <string name="settings_cross_notification_summary">Primiți notificări de la aplicațiile din celălalt spațiu de lucru</string>
+    <string name="settings_cross_notification_title">Notificări</string>
+    <string name="settings_msg_add_shortcut">Widget adăugat în Spațiul Principal</string>
+    <string name="settings_msg_remove_shortcut">Widget eliminat din Spațiul Principal</string>
+    <string name="settings_notification_and_switch">Comutare și notificări</string>
+    <string name="settings_space_data">Date</string>
+    <string name="settings_status_icon_summary">Arată pictograma Spațiului Secundar în bara de stare</string>
+    <string name="settings_status_icon_title">Pictograma Spațiului Secundar</string>
+    <string name="settings_switch_shortcut_summary">Arată pictograma ecranului principal în Spațiul Principal</string>
+    <string name="settings_switch_shortcut_title">Atingeți pictograma pentru a comuta</string>
+    <string name="show_normal_content">"Nu afișa elementele private"</string>
+    <string name="show_private_content">Afișează elementele private</string>
+    <string name="show_private_msg">Afișează mesajele private</string>
+    <string name="show_private_msg_summary">Afișează mesajele private în Spațiul Secundar</string>
+    <string name="spaceSetting">Setări</string>
+    <string name="startSet">Setați</string>
+    <string name="startTransfer">Mutați</string>
+    <string name="start_setting_guide_desc_title">Sunt câteva lucruri de setat</string>
+    <string name="summary_switch_apps_settings">Selectați aplicațiile utilizate în Spațiul Secundar</string>
+    <string name="switchDataSummary">Mutați elemente dintr-un spațiu de lucru în altul</string>
+    <string name="switch_apps_settings">Setări pentru aplicații</string>
+    <string name="switch_data_app">Mutați elementele în Spațiul Secundar</string>
+    <string name="switch_data_settings">Mutați datele</string>
+    <string name="switch_failed">"Nu s-au putut muta"</string>
+    <string name="switch_file_success">Fișierele au fost mutate cu succes</string>
+    <string name="switch_in_contacts">Importați contacte</string>
+    <string name="switch_in_files">Importați fișiere</string>
+    <string name="switch_in_hidden_space">Importați în Spațiul Secundar</string>
+    <string name="switch_in_photos">Importați fotografii</string>
+    <string name="switch_in_privacy_contacts">Importați contacte private</string>
+    <string name="switch_out_contacts">Exportați contacte</string>
+    <string name="switch_out_files">Exportați fișiere</string>
+    <string name="switch_out_hidden_space">Exportați date din Spațiul Secundar</string>
+    <string name="switch_out_photos">Exportați fotografii</string>
+    <string name="switch_out_privacy_contacts">Exportați contacte private</string>
+    <string name="switch_success">Mutate cu succes</string>
+    <string name="switch_to_first_space">Mergeți la Spațiul Principal</string>
+    <string name="switch_to_second_space">Mergeți la Spațiul Secundar</string>
+    <string name="switching">Se mută…</string>
+    <string name="switching_apps">Se mută aplicațiile…</string>
+    <string name="switching_contacts">Se mută contactele…</string>
+    <string name="switching_files">Se mută fișierele…</string>
+    <string name="switching_photos">Se mută fotografiile…</string>
+    <string name="temporary_no_set">Nu acum</string>
+    <string name="title_choose_app_status">Selectați tipul aplicațiilor</string>
+    <string name="title_switch_file">Ștergeți aceste fișiere?</string>
+    <string name="title_switch_photo">Ștergeți aceste fotografii?</string>
+    <string name="transferApp">Aplicațiile instalate în Spațiul Secundar vor fi mutate în Spațiul Principal și toate datele acestora se vor pierde.</string>
+    <string name="transferContact">Contactele din Spațiul Secundar vor fi mutate în Spațiul Principal</string>
+    <string name="transferDataConfirm">Elementele rămase vor fi șterse</string>
+    <string name="transferDataConfirmDes">"Nu veți mai putea restaura elementele după ce vor fi șterse."</string>
+    <string name="transferDataLable">Selectați elementele pe care doriți să le mutați</string>
+    <string name="transferFile">Selectați manual alte fișiere</string>
+    <string name="transferImage">Fotografiile din Spațiul Secundar vor fi mutate în albumul \"Spațiu Secundar\" din Spațiul Principal</string>
+    <string name="transferMessage">Mesajele din Spațiul Secundar vor fi mutate în Spațiul Principal</string>
+    <string name="tryNow">Încercați acum</string>
+    <string name="wating">Doar o secundă…</string>
+    <string name="xspace_chocie">Alte aplicații</string>
+    <string name="xspace_creating">Se clonează aplicația…</string>
+    <string name="xspace_description">Clonați aplicații pentru a le putea utiliza separat. Acestea vor avea pictograme specifice pe ecranul principal.</string>
+    <string name="xspace_header">Aplicații clonate</string>
+    <string name="xspace_install_completed">Pictograma adăugată în Ecranul principal</string>
+    <string name="xspace_installing">Se instalează…</string>
+    <string name="xspace_introduce">Recomandate</string>
+    <string name="xspace_label">Aplicații clonate</string>
+    <string name="xspace_loading_msg">Se încarcă aplicațiile…</string>
+    <string name="xspace_uninstall_completed">Aplicația clonată a fost dezinstalată cu succes</string>
+    <string name="xspace_uninstall_dialog_content">Dezinstalarea unei aplicații clonate va șterge și toate datele acesteia.</string>
+    <string name="xspace_uninstall_dialog_title">Dezinstalați aplicația clonată</string>
+    <string name="xspace_uninstalling">Se dezinstalează…</string>
 </resources>
