--- a/Romanian/main/Settings.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Settings.apk/res/values-ro/strings.xml
@@ -2178,102 +2178,102 @@ Pentru a şterge muzică, imagini şi alte date ale utilizatorului, "<b>cardul S
     <string name="path_music_headset_settings">Setări/Setări adiționale/Căști și efecte audio</string>
     <string name="path_music_mi_effect_title">Setări/Sunet/Setări audio/Amplificatorul Mi Sound</string>
     <string name="path_network_settings">Setări/Cartele SIM și rețele mobile</string>
-  <string name="path_networks_title">Settings/SIM cards &amp; mobile networks/Cellular networks</string>
+    <string name="path_networks_title">Setări/Cartele SIM și rețele mobile/Rețele mobile</string>
   <string name="path_nfc_se_route_title">Settings/More/Secure element position</string>
-  <string name="path_notification_app_list_settings">Settings/Notifications &amp; status bar/App notifications</string>
-  <string name="path_notification_sound">Settings/Sound &amp; vibration/Default notification sound</string>
-  <string name="path_notification_sound_title">Settings/Sound &amp; vibration/Default notification sound</string>
-  <string name="path_ntts_settings_title">Settings/Additional settings/Accessibility/tts_settings_title</string>
-  <string name="path_oldman_mode">Settings/Lite Mode</string>
-  <string name="path_onekey_migrate">Settings/Additional settings/Transfer</string>
-  <string name="path_other_advanced_settings">Settings/Additional settings</string>
-  <string name="path_owner_info_settings">Settings/Lock screen &amp; password/Owner info</string>
-  <string name="path_page_layout_settings">Settings/Display/Text size</string>
-  <string name="path_pointer_speed">Settings/Additional settings/Language &amp; input/Pointer speed</string>
+    <string name="path_notification_app_list_settings">Setări/Panoul notificărilor și bara de stare/Notificările aplicațiilor</string>
+    <string name="path_notification_sound">Setări/Sunet și vibrare/Sunet de notificare implicit</string>
+    <string name="path_notification_sound_title">Setări/Sunet și vibrare/Sunet de notificare implicit</string>
+  <string name="path_ntts_settings_title">Setări/Setări adiționale/Accesibilitate/Rezultatul transformării textului în vorbire</string>
+  <string name="path_oldman_mode">Setări/Modul Ușor</string>
+    <string name="path_onekey_migrate">Setări/Setări adiționale/Mi Mover</string>
+    <string name="path_other_advanced_settings">Setări/Setări adiționale</string>
+    <string name="path_owner_info_settings">Setări/Blocare ecran și parolă/Info. proprietar</string>
+    <string name="path_page_layout_settings">Setări/Afișaj/Dimensiunea textului</string>
+    <string name="path_pointer_speed">Setări/Setări adiționale/Limbă și metodă de introducere/Viteza indicatorului</string>
   <string name="path_power_checker">Settings/Additional/Beta features/Power Checker</string>
-  <string name="path_power_hide_mode_title">Settings/Battery &amp; performance/Manage apps battery usage</string>
-  <string name="path_power_mode_settings">Settings/Battery &amp; performance/Power settings</string>
-  <string name="path_power_optimize">Settings/Additional/Beta features/Battery saver</string>
-  <string name="path_pref_volume_wake_title">Settings/Lock screen &amp; password/Wake with Volume buttons</string>
-  <string name="path_preferred_network_type_settings">Settings/SIM cards &amp; mobile networks/Preferred network type</string>
-  <string name="path_privacy_policy">Settings/About phone/Legal information/Privacy Policy</string>
-  <string name="path_privacy_settings">Settings/Additional settings/Backup &amp; reset</string>
-  <string name="path_ringer_volume_settings">Settings/Sound &amp; vibration/Volumes/Ringtone &amp; notifications</string>
-  <string name="path_ringtone_settings">Settings/Sound &amp; vibration/Phone ringtone</string>
-  <string name="path_safe_result_header_title_system">Settings/Additional settings/System Security</string>
-  <string name="path_screen_effect_settings">Settings/Display/Colors &amp; saturation</string>
-  <string name="path_screen_key_long_press_timeout">Settings/Additional settings/Buttons/Set long press time</string>
-  <string name="path_screen_on_proximity_sensor_title">Settings/Lock screen &amp; password/Prevent pocket dials</string>
-  <string name="path_screen_optimize">Settings/Display/Colors &amp; contrast</string>
-  <string name="path_screen_paper_mode">Settings/Display/Reading mode</string>
-  <string name="path_screen_saver_settings">Settings/Display/Screensaver</string>
-  <string name="path_screen_timeout_settings">Settings/Lock screen &amp; password/Sleep</string>
-  <string name="path_second_space">Settings/Second Space</string>
-  <string name="path_security_encryption_title">Settings/Additional settings/System Security/Encrypt device using lock screen password</string>
-  <string name="path_security_passwords_title">Settings/Lock screen &amp; password/Screen Lock</string>
-  <string name="path_security_settings">Settings/Additional settings/Privacy</string>
-  <string name="path_slot_status_title">Settings/About phone/IMEI information</string>
-  <string name="path_sms_delivered_sound_title">Settings/Sound &amp; vibration/Message delivered</string>
-  <string name="path_sms_received_settings">Settings/Sound &amp; vibration/Message reveived</string>
-  <string name="path_sound_effects_enable_title">Settings/Sound &amp; vibration/Touch sounds</string>
-  <string name="path_sound_settings">Settings/Sound &amp; vibration</string>
-  <string name="path_status_bar_settings">Settings/Notifications &amp; status bar</string>
-  <string name="path_status_bar_settings_custom_carrier">Settings/Notifications &amp; status bar/Edit carrier name</string>
-  <string name="path_status_bar_settings_expandable_under_keyguard">Settings/Notifications &amp; status bar/Show on lock screen</string>
-  <string name="path_status_bar_settings_show_carrier">Settings/Notifications &amp; status bar/Show carrier name</string>
-  <string name="path_status_bar_settings_show_network_speed">Settings/Notifications &amp; status bar/Show connection speed</string>
-  <string name="path_status_bar_settings_show_notification_icon">Settings/Notifications &amp; status bar/Show notification icons</string>
-  <string name="path_status_bar_settings_show_screenshot_notification">Settings/Notifications &amp; status bar/Show screenshot notification</string>
-  <string name="path_status_bar_settings_style">Settings/Notifications &amp; status bar/Statusbar style</string>
-  <string name="path_status_bar_settings_toggle_collapse_after_clicked">Settings/Notifications &amp; status bar/Collapse after touch</string>
-  <string name="path_status_sim">Settings/About phone/SIM status</string>
-  <string name="path_storage_settings">Settings/Storage/Cleaner</string>
-  <string name="path_sync_settings">Settings/Sync</string>
-  <string name="path_system_app_settings">Settings/System apps</string>
-  <string name="path_tether_restriction_nfc_enable_title">Settings/More/NFC</string>
-  <string name="path_tether_settings_title_bluetooth">Settings/More/Bluetooth tethering</string>
-  <string name="path_tether_settings_title_usb">Settings/More/USB tethering</string>
-  <string name="path_theme_settings">Settings/Themes</string>
-  <string name="path_toggle_position_settings">Settings/Notifications &amp; status bar/Toggle positions</string>
-  <string name="path_touch_assistant_settings">Settings/Additional settings/Touch assistant</string>
-  <string name="path_touch_sensitive_title">Settings/Display/Glove mode</string>
-  <string name="path_trusted_credentials">Settings/Additional settings/System Security/Trusted credentials</string>
-  <string name="path_tts_settings_title">Settings/Additional settings/Language &amp; input/Text-to-speech output</string>
-  <string name="path_turn_on_security_lock">Settings/Lock screen &amp; password/Screen Lock/Change screen lock</string>
-  <string name="path_unlock_set_settings">Settings/Lock screen &amp; password</string>
-  <string name="path_user_dict_settings_title">Settings/Additional settings/Language &amp; input/Personal dictionary</string>
-  <string name="path_vibrate_in_silent_title">Settings/Sound &amp; vibration/Vibrate in silent mode</string>
-  <string name="path_vibrate_on_touch_title">Settings/Sound &amp; vibration/Vibrate on touch</string>
-  <string name="path_vibrate_when_ringing_title">Settings/Sound &amp; vibration/Also vibrate for calls</string>
-  <string name="path_virtual_sim">Settings/More/International mobile data</string>
-  <string name="path_vpn_enable">Settings/More/VPN/VPN enable</string>
-  <string name="path_vpn_settings">Settings/More/VPN</string>
-  <string name="path_vpn_settings_password">Settings/More/VPN/VPN password</string>
-  <string name="path_wakeup_for_keyguard_notification_title">Settings/Lock screen &amp; password/Wake lock screen for notifications</string>
-  <string name="path_wallpaper_settings">Settings/Wallpaper</string>
-  <string name="path_wifi_advanced_ip_address_title">Settings/WLAN/Advanced settings/IP address</string>
-  <string name="path_wifi_advanced_mac_address_title">Settings/WLAN/Advanced settings/WLAN MAC address</string>
-  <string name="path_wifi_display_settings">Settings/More/Wireless display</string>
-  <string name="path_wifi_enable">Settings/WLAN/WLAN enable</string>
-  <string name="path_wifi_install_credentials">Settings/WLAN/Advanced settings/Install certificates</string>
-  <string name="path_wifi_menu_p2p">Settings/WLAN/Advanced settings/WLAN Direct</string>
-  <string name="path_wifi_menu_wps_pin">Settings/WLAN/Advanced settings/WPS PIN entry</string>
-  <string name="path_wifi_more_settings">Settings/More</string>
-  <string name="path_wifi_scan_always_available">Settings/WLAN/Advanced settings/Scanning always available</string>
-  <string name="path_wifi_setting_frequency_band_title">Settings/WLAN/Advanced settings/WLAN frequency band</string>
-  <string name="path_wifi_setting_sleep_policy_title">Settings/WLAN/Advanced settings/Keep WLAN on during sleep</string>
-  <string name="path_wifi_settings">Settings/WLAN</string>
-  <string name="path_wifi_tether_checkbox">Settings/Personal hotspot/Portable hotspot</string>
-  <string name="path_wifi_tether_configure_ap_text">Settings/Personal hotspot/Set up portable hotspot</string>
-  <string name="path_wifi_tether_settings">Settings/Personal hotspot</string>
-  <string name="path_wifi_wapi_cert_install">Settings/WLAN/Advanced settings/Install WAPI certificate</string>
-  <string name="path_wifi_wapi_cert_uninstall">Settings/WLAN/Advanced settings/Uninstall WAPI certificate</string>
-  <string name="path_wps_connect_title">Settings/WLAN/Advanced settings/WPS push button</string>
-  <string name="path_xiaomi_account">Settings/Mi Account</string>
-  <string name="path_xiaomi_cloud_service">Apps</string>
-  <string name="path_xiaomi_money_service">Apps</string>
-  <string name="path_xspace">Settings/Cloned apps</string>
-  <string name="path_zen_mode_option_miui_silent">Settings/Sound &amp; vibration/Silent mode</string>
+    <string name="path_power_hide_mode_title">Setări/Acumulator și performanță/Gestionare utilizare acumulator de către aplicații</string>
+    <string name="path_power_mode_settings">Setări/Acumulator și performanță/Energie</string>
+  <string name="path_power_optimize">Setări/Setări adiționale/Beta features/Battery saver</string>
+    <string name="path_pref_volume_wake_title">Setări/Blocare ecran și parolă/Trezire cu butoanele de volum</string>
+    <string name="path_preferred_network_type_settings">Setări/CArtele SIM și rețele mobile/Tipul de rețea preferat</string>
+    <string name="path_privacy_policy">Setări/Informații telefon/Informații de ordin juridic/Politica de Confidențialitate</string>
+    <string name="path_privacy_settings">Setări/Setări adiționale/Creare copie de rezervă și resetare</string>
+  <string name="path_ringer_volume_settings">Setări/Sunet și vibrare/Volume/Ton de apel și notificări</string>
+    <string name="path_ringtone_settings">Setări/Sunet și vibrare/Ton de apel</string>
+    <string name="path_safe_result_header_title_system">Setări/Setări adiționale/Securitate</string>
+    <string name="path_screen_effect_settings">Setări/Afișaj/Temperatură de culoare și saturație</string>
+    <string name="path_screen_key_long_press_timeout">Setări/Setări adiționale/Butoane/Durată apăsare lungă</string>
+    <string name="path_screen_on_proximity_sensor_title">Setări/Blocare ecran și parolă/Prevenirea apelării în buzunar</string>
+  <string name="path_screen_optimize">Setări/Afișaj/Temperatură de culoare și contrast</string>
+  <string name="path_screen_paper_mode">Setări/Afișaj/Reading mode</string>
+  <string name="path_screen_saver_settings">Setări/Afișaj/Screensaver</string>
+    <string name="path_screen_timeout_settings">Setări/Blocare ecran și parolă/Inactivitate</string>
+    <string name="path_second_space">Setări/Spațiu Secundar</string>
+    <string name="path_security_encryption_title">Setări/Setări adiționale/Securitate/Criptare dispozitiv cu parola de blocare a ecranului</string>
+    <string name="path_security_passwords_title">Setări/Blocare ecran și parolă/Blocare ecran</string>
+  <string name="path_security_settings">Setări/Setări adiționale/Confidențialitate</string>
+  <string name="path_slot_status_title">Setări/Informații telefon/IMEI</string>
+  <string name="path_sms_delivered_sound_title">Setări/Sunet și vibrare/Mesaj trimis</string>
+    <string name="path_sms_received_settings">Setări/Sunet și vibrare/SMS recepționat</string>
+    <string name="path_sound_effects_enable_title">Setări/Sunet și vibrare/Sunete la atingere</string>
+    <string name="path_sound_settings">Setări/Sunet și vibrare</string>
+    <string name="path_status_bar_settings">Setări/Panoul notificărilor și bara de stare</string>
+    <string name="path_status_bar_settings_custom_carrier">Setări/Panoul notificărilor și bara de stare/Editați numele operatorului</string>
+    <string name="path_status_bar_settings_expandable_under_keyguard">Setări/Panoul notificărilor și bara de stare/Se afișează pe blocarea ecranului</string>
+    <string name="path_status_bar_settings_show_carrier">Setări/Panoul notificărilor și bara de stare/Afișare nume operator</string>
+    <string name="path_status_bar_settings_show_network_speed">Setări/Panoul notificărilor și bara de stare/Afișare viteză de conexiune</string>
+    <string name="path_status_bar_settings_show_notification_icon">Setări/Panoul notificărilor și bara de stare/Se afișează pictogramele notificărilor</string>
+  <string name="path_status_bar_settings_show_screenshot_notification">Setări/Panoul notificărilor și bara de stare/Show screenshot notification</string>
+    <string name="path_status_bar_settings_style">Setări/Panoul notificărilor și bara de stare/Afișarea notificărilor și a comutatoarelor</string>
+    <string name="path_status_bar_settings_toggle_collapse_after_clicked">Setări/Panoul notificărilor și bara de stare/Se restrânge după atingere</string>
+  <string name="path_status_sim">Setări/Informații telefon/SIM status</string>
+  <string name="path_storage_settings">Setări/Stocare/Cleaner</string>
+    <string name="path_sync_settings">Setări/SSincronizare</string>
+    <string name="path_system_app_settings">Setări/Aplicații de sistem</string>
+  <string name="path_tether_restriction_nfc_enable_title">Setări/More/NFC</string>
+    <string name="path_tether_settings_title_bluetooth">Setări/Mai multe/Tethering prin Bluetooth</string>
+    <string name="path_tether_settings_title_usb">Setări/Mai multe/Tethering prin USB</string>
+    <string name="path_theme_settings">Setări/Teme</string>
+    <string name="path_toggle_position_settings">Setări/Panoul notificărilor și bara de stare/Poziția comutatoarelor</string>
+    <string name="path_touch_assistant_settings">Setări/Setări adiționale/Asistent ecran</string>
+  <string name="path_touch_sensitive_title">Setări/Afișaj/Glove mode</string>
+  <string name="path_trusted_credentials">Setări/Setări adiționale/Securitate/Trusted credentials</string>
+    <string name="path_tts_settings_title">Setări/Setări adiționale/Limbă și metodă de introducere/Rezultatul transformării textului în vorbire</string>
+  <string name="path_turn_on_security_lock">Setări/Blocare ecran și parolă/Blocare ecran/Selectați metoda de blocare a ecranului</string>
+    <string name="path_unlock_set_settings">Setări/Blocare ecran și parolă</string>
+    <string name="path_user_dict_settings_title">Setări/Setări adiționale/Limbă și metodă de introducere/Dicționar personal</string>
+    <string name="path_vibrate_in_silent_title">Setări/Sunet și vibrare/Vibrează în profilul Silențios</string>
+    <string name="path_vibrate_on_touch_title">Setări/Sunet și vibrare/Vibrare la atingere</string>
+    <string name="path_vibrate_when_ringing_title">Setări/Sunet și vibrare/Vibrează când sună</string>
+  <string name="path_virtual_sim">Setări/Mai multe/International mobile data</string>
+  <string name="path_vpn_enable">Setări/Mai multe/VPN/VPN enable</string>
+    <string name="path_vpn_settings">Setări/Mai multe/VPN</string>
+    <string name="path_vpn_settings_password">Setări/Mai multe/VPN/Parolă de protecție</string>
+    <string name="path_wakeup_for_keyguard_notification_title">Setări/Blocare ecran și parolă/Trezire ecran pentru notificări</string>
+    <string name="path_wallpaper_settings">Setări/Imagine de fundal</string>
+    <string name="path_wifi_advanced_ip_address_title">Setări/Wi-Fi/Setări avansate/Adresă IP</string>
+    <string name="path_wifi_advanced_mac_address_title">Setări/Wi-Fi/Setări avansate/Adresă MAC</string>
+    <string name="path_wifi_display_settings">Setări/Mai multe/Ecran wireless</string>
+    <string name="path_wifi_enable">Setări/Wi-Fi/Activați Wi-Fi</string>
+    <string name="path_wifi_install_credentials">Setări/Wi-Fi/Setări avansate/Instalare certificate</string>
+    <string name="path_wifi_menu_p2p">Setări/Wi-Fi/Setări avansate/Wi-Fi Direct</string>
+    <string name="path_wifi_menu_wps_pin">Setări/Wi-Fi/Setări avanasate/Introduceți PIN WPS</string>
+    <string name="path_wifi_more_settings">Setări/Mai multe</string>
+    <string name="path_wifi_scan_always_available">Setări/Wi-Fi/Setări avansate/Scanare mereu disponibilă</string>
+  <string name="path_wifi_setting_frequency_band_title">Setări/Wi-Fi/Setări avansate/Bandă de frecvență Wi-FI</string>
+    <string name="path_wifi_setting_sleep_policy_title">Setări/Wi-Fi/Setări avansate/Mențineți Wi-Fi activat în modul Inactiv</string>
+    <string name="path_wifi_settings">Setări/Wi-Fi</string>
+    <string name="path_wifi_tether_checkbox">Setări/Hotspot personal/Hotspot Wi-Fi portabil</string>
+    <string name="path_wifi_tether_configure_ap_text">Setări/Hotspot personal/Configurați hotspotul Wi-Fi</string>
+    <string name="path_wifi_tether_settings">Setări/Hotspot personal</string>
+    <string name="path_wifi_wapi_cert_install">Setări/Wi-Fi/Setări avansate/Instalați certificat WAPI</string>
+    <string name="path_wifi_wapi_cert_uninstall">Setări/Wi-Fi/Setări avansate/Dezinstalați certificat WAPI</string>
+  <string name="path_wps_connect_title">Setări/Wi-Fi/Setări avansate/Conectare WPS</string>
+    <string name="path_xiaomi_account">Setări/Contul Mi</string>
+  <string name="path_xiaomi_cloud_service">Aplicații</string>
+  <string name="path_xiaomi_money_service">Aplicații</string>
+  <string name="path_xspace">Setări/Aplicații clonate</string>
+    <string name="path_zen_mode_option_miui_silent">Setări/Sunet și vibrare/Modul Silențios</string>
     <string name="performance_category">Performanţă</string>
     <string name="permission_detail_info">Detalii permisiuni</string>
     <string name="permission_detail_info_summary">Securitate: %1$d | Confidenţialitate: %2$d | Altele: %3$d</string>
