TeleService path strings

--- a/Romanian/main/TeleService.apk/res/values-ro/strings.xml
+++ b/Romanian/main/TeleService.apk/res/values-ro/strings.xml
@@ -831,6 +831,39 @@ Pentru mai multe opţiuni, încercaţi din nou sau apelaţi Serviciul Clienţi."
     <string name="overseas_roaming_setting">Date mobile în roaming</string>
     <string name="password_changed">Parolă modificată cu succes</string>
     <string name="password_title">Parolă</string>
+    <string name="path_answer_state_setting_title">Aplicații de sistem/Telefon/Setările apelurilor primite</string>
+  <string name="path_antispam_setting">Aplicații de sistem/Telefon/Blocklist</string>
+    <string name="path_app_name">Aplicații de sistem/Telefon</string>
+    <string name="path_auto_answer_pref_title">Aplicații de sistem/Telefon/Răspuns automat</string>
+  <string name="path_autoip">Aplicații de sistem/Telefon/Setări avansate/Auto IP dialing</string>
+    <string name="path_call_forwarding_settings">Aplicații de sistem/Telefon/Setările pentru redirecționarea apelurilor</string>
+    <string name="path_call_record_auto_title">Aplicații de sistem/Telefon/Înregistrare apel/Înregistrare apeluri în mod automat</string>
+    <string name="path_call_record_setting">Aplicații de sistem/Telefon/Înregistrare apel</string>
+    <string name="path_call_recording_notification_toggle_title">Aplicații de sistem/Telefon/Înregistrare apel/Notificare înregistrare apel</string>
+    <string name="path_call_waiting_title">Aplicații de sistem/Telefon/Apel în așteptare</string>
+    <string name="path_call_waiting_tone_title">Aplicații de sistem/Telefon/Setări avansate/Notificare apel în așteptare</string>
+    <string name="path_caller_id_title">Aplicații de sistem/Telefon/Setări avansate/ID apelant</string>
+    <string name="path_cloud_antispam_title">Aplicații de sistem/Telefon/Identificare numere necunoscute</string>
+    <string name="path_connect_disconnect_vibrate_title">Aplicații de sistem/Telefon/Setări avansate/Vibrare la răspuns</string>
+    <string name="path_dtmf_tones_title">Aplicații de sistem/Telefon/Setări avansate/Tonuri DTMF</string>
+    <string name="path_enable_antispam_strange_title">Aplicații de sistem/Telefon/Setările apelurilor primite/Prima sonerie dezactivată</string>
+    <string name="path_enable_proximity_title">Aplicații de sistem/Telefon/Setările apelurilor primite/Senzor de proximitate</string>
+    <string name="path_fdn">Aplicații de sistem/Telefon/Setări avansate/Numere cu apelări restricționate</string>
+    <string name="path_flash_when_ring_title">Aplicații de sistem/Telefon/Setările apelurilor primite/Activare bliț la apelurile primite</string>
+    <string name="path_handon_ringer_title">Aplicații de sistem/Telefon/Setările apelurilor primite/Oprire sonerie la ridicare</string>
+    <string name="path_missed_call_notify_times_title">Aplicații de sistem/Telefon/Setări avansate/Memento apel nepreluat</string>
+    <string name="path_preference_dial_pad_touch_tone_title">Aplicații de sistem/Telefon/Setări avansate/Tonuri taste numerice</string>
+    <string name="path_preference_telocation_title">Aplicații de sistem/Telefon/Locație</string>
+    <string name="path_reject_via_sms">Aplicații de sistem/Telefon/Setări avansate/Răspunsuri rapide</string>
+  <string name="path_sip_settings">Aplicații de sistem/Telefon/Setări avansate/Setări pentru apeluri prin internet</string>
+    <string name="path_t9_indexing_method_title">Aplicații de sistem/Telefon/Setări avansate/Căutare T9</string>
+    <string name="path_telocation_auto_country_code">Aplicații de sistem/Telefon/Locație/Adăugați codul țării</string>
+    <string name="path_telocation_contacts_countrycode">Aplicații de sistem/Telefon/Locație/Cod de țară prestabilit</string>
+    <string name="path_telocation_custom_location_title">Aplicații de sistem/Telefon/Locație/Locațiile mele</string>
+    <string name="path_telocation_enable_title">Aplicații de sistem/Telefon/Locație/Afișare locație</string>
+    <string name="path_turnover_mute_title">Aplicații de sistem/Telefon/Setările apelurilor primite/Întoarcere pentru a dezactiva soneria</string>
+    <string name="path_voicemail_settings">Aplicații de sistem/Telefon/Setări avansate/Configurare</string>
+  <string name="path_voip_setting">Aplicații de sistem/Telefon/Setări VoIP</string>
     <string name="pause_prompt_no">Nu</string>
     <string name="pause_prompt_str">"Se trimit tonuri
 "</string>
